<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <!-- Historique des alertes -->
        <item
            android:id="@+id/nav_historique_alertes"
            android:icon="@drawable/clock"
            android:title="@string/historique_alertes" />

        <!-- Poids et stats -->
        <item
            android:id="@+id/nav_weights"
            android:icon="@drawable/stats"
            android:title="@string/weights" />

        <!-- Mon compte -->
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/user"
            android:title="@string/moncompte" />

        <!-- Déconnexion -->
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/logout" />

    </group>

</menu>
