<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="left"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Nom"
        android:hint="@string/nom"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:textSize="15sp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Prénom"
        android:hint="@string/prenom"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:textSize="15sp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Identifiant"
        android:hint="@string/id"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:textSize="15sp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/MotDePasse"
        android:hint="@string/mdp"
        android:inputType="textPassword"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:textSize="15sp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ConfimationMotDePasse"
        android:hint="@string/mdpbis"
        android:inputType="textPassword"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:textSize="15sp"
        />

    <Button
        android:id="@+id/CreateNewAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/nouveaucompte"
        />

</LinearLayout>




